tests/snapshots/yaml_suite_snapshots__yaml_suite_H7J7_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Node anchor not indented
  from: "https://gist.github.com/anonymous/f192e7dab6da31831f264dbf1947cb83 via @ingydotnet"
  tags: anchor error indent tag
  fail: true
  yaml: "key: &x\n!!map\n  a: b\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   =VAL &x :\n"
