tests/snapshots/yaml_suite_snapshots__yaml_suite_H7TQ_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: "Extra words on %YAML directive"
  from: "@ingydotnet"
  tags: directive
  fail: true
  yaml: "%YAML 1.2 foo\n---\n"
  tree: "+STR\n"
