tests/snapshots/yaml_suite_snapshots__yaml_suite_H7TQ_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@ingydotnet"
  name: "Extra words on %YAML directive"
  tags: directive
  tree: "+STR\n"
  yaml: "%YAML 1.2 foo\n---\n"
