tests/snapshots/yaml_suite_snapshots__yaml_suite_HM87_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Scalars in flow start with syntax char
  from: "@ingydotnet"
  tags: flow scalar
  yaml: "[:x]\n"
  tree: "+STR\n +DOC\n  +SEQ []\n   =VAL ::x\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \":x\"\n]\n"
  dump: "- :x\n"
- yaml: "[?x]\n"
  tree: "+STR\n +DOC\n  +SEQ []\n   =VAL :?x\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"?x\"\n]\n"
  dump: "- ?x\n"
