tests/snapshots/yaml_suite_snapshots__yaml_suite_HM87_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- :x\n"
  from: "@ingydotnet"
  json: "[\n  \":x\"\n]\n"
  name: Scalars in flow start with syntax char
  tags: flow scalar
  tree: "+STR\n +DOC\n  +SEQ []\n   =VAL ::x\n  -SEQ\n -DOC\n-STR\n"
  yaml: "[:x]\n"
- dump: "- ?x\n"
  json: "[\n  \"?x\"\n]\n"
  tree: "+STR\n +DOC\n  +SEQ []\n   =VAL :?x\n  -SEQ\n -DOC\n-STR\n"
  yaml: "[?x]\n"
