tests/snapshots/yaml_suite_snapshots__yaml_suite_HMK4_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "name: Mark McGwire\naccomplishment: >\n  Mark set a major league home run record in 1998.\nstats: |\n  65 Home Runs\n  0.278 Batting Average\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2761083"
  json: "{\n  \"name\": \"Mark McGwire\",\n  \"accomplishment\": \"Mark set a major league home run record in 1998.\\n\",\n  \"stats\": \"65 Home Runs\\n0.278 Batting Average\\n\"\n}\n"
  name: Spec Example 2.16. Indentation determines scope
  tags: spec folded literal
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :name\n   =VAL :Mark McGwire\n   =VAL :accomplishment\n   =VAL >Mark set a major league home run record in 1998.\\n\n   =VAL :stats\n   =VAL |65 Home Runs\\n0.278 Batting Average\\n\n  -MAP\n -DOC\n-STR\n"
  yaml: "name: Mark McGwire\naccomplishment: >\n  Mark set a major league\n  home run record in 1998.\nstats: |\n  65 Home Runs\n  0.278 Batting Average\n"
